[gd_scene load_steps=3 format=3 uid="uid://cw3l1q414ycnf"]

[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_vnb7q"]
[ext_resource type="Texture2D" uid="uid://biknsqlgwrx45" path="res://resources/materials/grass/Color.jpg" id="2_5fb1q"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vnb7q")

[node name="Sprite2D" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5fb1q")
expand_mode = 1

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -68.0
offset_right = 48.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Singleplayer" type="Button" parent="Menu"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
text = "Single player"

[node name="Multiplayer" type="Button" parent="Menu"]
layout_mode = 2
text = "Multiplayer"

[node name="Settings" type="Button" parent="Menu"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="Menu"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Singleplayer")
text = "Quit Game"

[connection signal="pressed" from="Menu/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="Menu/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_quit_pressed"]
